CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(MMSEG REQUIRED)
FIND_PACKAGE(MySQL REQUIRED)

INCLUDE_DIRECTORIES(
  ${MYSQL_INCLUDE_DIR}
  ${MMSEG_INCLUDE_DIR}
)

AUX_SOURCE_DIRECTORY(./ CUR_SRCS)
AUX_SOURCE_DIRECTORY(../ PUR_SRCS)

SET(LIBRARIES
  ${MMSEG_LIBRARY}
  ${MYSQL_LIBRARY}
)

ADD_EXECUTABLE(indexer ${CUR_SRCS} ${PUR_SRCS})
TARGET_LINK_LIBRARIES(indexer ${LIBRARIES})
