PROJECT(tcp_frame_test)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS}  -D_FILE_OFFSET_BITS=64 -D_LARGE_FILE  -O0 -W -g")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS}  -D_FILE_OFFSET_BITS=64 -D_LARGE_FILE -O3 -W")

IF (PROTOBUF)
  SET(PROTOBUF_REQUEST ../../../server_frame/server_request.cpp)
  SET(PROTOBUF_LIBRARYS libprotobuf.so)
  ADD_DEFINITIONS(-DPROTOBUF)
ELSE()
  SET(PROTOBUF_LIBRARY "")
  SET(PROTOBUF_REQUEST "")
ENDIF(PROTOBUF)

IF (CMAKE_BUILD_TYPE STREQUAL "Debug")
  ADD_DEFINITIONS(-DDEBUG)
	MESSAGE(STATUS "Debug Mode")
	MESSAGE(STATUS "Flags:" ${CMAKE_CXX_FLAGS_DEBUG})
ELSE (CMAKE_BUILD_TYPE STREQUAL "Debug")
	MESSAGE(STATUS "Release Mode")
	MESSAGE(STATUS "Flags:" ${CMAKE_CXX_FLAGS_RELEASE})
ENDIF (CMAKE_BUILD_TYPE STREQUAL "Debug")

SET(LIBRARIES
  libpthread.so
)

SET(SERVER_SRCS server.cpp)
SET(CLIENT_SRCS client.cpp)

LIST(APPEND LIBRARIES   ${PROTOBUF_LIBRARYS})
LIST(APPEND SERVER_SRCS ${PROTOBUF_REQUEST})
LIST(APPEND CLIENT_SRCS ${PROTOBUF_REQUEST})


ADD_EXECUTABLE(server ${SERVER_SRCS})
TARGET_LINK_LIBRARIES(server ${LIBRARIES})

ADD_EXECUTABLE(client client.cpp ${CLIENT_SRCS})
TARGET_LINK_LIBRARIES(client ${LIBRARIES})

#ADD_EXECUTABLE(tcp_client_unittest tcp_client_unittest.cpp)
#TARGET_LINK_LIBRARIES(tcp_client_unittest ${LIBRARIES} ${UNITTEST_LIBRARYS})

SET(EXECUTABLE_OUTPUT_PATH ./bin)
